--- a/package.json
+++ b/package.json
@@ -34,10 +34,18 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "happy-dom": "^14.12.3",
     "husky": "^9.1.3",
+    "lint-staged": "^15.2.7",
     "prettier": "^3.3.3",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.0.4"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+      "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
+      "vitest"
+    ]
   }
 }
