--- a/package.json
+++ b/package.json
@@ -1,51 +1,51 @@
 {
-  "name": "test-env-setup-course",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
-    "preview": "vite preview",
-    "test": "vitest --run",
-    "test:watch": "vitest watch",
-    "test:coverage": "vitest run --coverage",
-    "format": "prettier --write .",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "@vitest/coverage-v8": "^2.0.4",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "happy-dom": "^14.12.3",
-    "husky": "^9.1.3",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.3.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.4",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^2.0.4"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-      "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
-      "vitest"
-    ]
-  }
+    "name": "test-env-setup-course",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "lint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
+        "preview": "vite preview",
+        "test": "vitest --run",
+        "test:watch": "vitest watch",
+        "test:coverage": "vitest run --coverage",
+        "format": "prettier --write .",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^6.4.8",
+        "@testing-library/react": "^16.0.0",
+        "@testing-library/user-event": "^14.5.2",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@typescript-eslint/eslint-plugin": "^7.15.0",
+        "@typescript-eslint/parser": "^7.15.0",
+        "@vitejs/plugin-react-swc": "^3.5.0",
+        "@vitest/coverage-v8": "^2.0.4",
+        "eslint": "^8.57.0",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.7",
+        "happy-dom": "^14.12.3",
+        "husky": "^9.1.3",
+        "lint-staged": "^15.2.7",
+        "prettier": "^3.3.3",
+        "typescript": "^5.2.2",
+        "vite": "^5.3.4",
+        "vite-tsconfig-paths": "^4.3.2",
+        "vitest": "^2.0.4"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "npm run lint",
+            "npm run lint:fix",
+            "npm run format"
+        ]
+    }
 }
